# fractawow

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  Constants.h  FractalRenderer.cpp  FractalRenderer.h  InputHandler.cpp  InputHandler.h  main.cpp
